<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".fragment.NewRecipe">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_layout_recipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/name_of_new_recipe"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_recipe_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:maxLength="30" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredients"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_layout_recipe_name" />

        <LinearLayout
            android:id="@+id/layout_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_ingredients">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_layout_ingredient_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_ingredient">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_ingredient_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLength="30" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_layout_ingredient_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_amount">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_ingredient_amount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLength="30" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_layout_ingredient_unit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_unit">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_ingredient_unit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLength="30" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_add_ingredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_ingredient"
            app:layout_constraintTop_toBottomOf="@id/layout_ingredients" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/button_add_ingredient"
            tools:layout_height="200dp" />

        <TextView
            android:id="@+id/text_descriptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_ingredients" />

        <LinearLayout
            android:id="@+id/layout_descriptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_descriptions">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_layout_description_num"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_description_num"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLength="30" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_layout_description_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_desc_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_description_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLength="30" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_add_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_description"
            app:layout_constraintTop_toBottomOf="@id/layout_descriptions" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_descriptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/button_add_description"
            tools:layout_height="200dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
